--- a/src/components/commons/footer/footer.astro
+++ b/src/components/commons/footer/footer.astro
@@ -11,7 +11,7 @@ import SocialIcons from "../socialIcons/socialIcons.jsx";
       <h3
         class="text-[#69c7c7] text-4xl font-bold drop-shadow-[1.5px_1.5px_0_#7836cf]"
       >
-        LRC
+        PCR
       </h3>
     </a>
 
@@ -24,15 +24,19 @@ import SocialIcons from "../socialIcons/socialIcons.jsx";
           <a href="/" class="hover:text-[#552496] font-semibold">Inicio</a>
         </li>
         <li>
-          <a href="/Proyectos" class="hover:text-[#552496] font-semibold"
+          <a href="/experiencia" class="hover:text-[#552496] font-semibold"
+            >Experiencia</a>
+        </li>
+        <li>
+          <a href="/proyectos" class="hover:text-[#552496] font-semibold"
             >Proyectos</a>
         </li>
         <li>
-          <a href="/lautaro" class="hover:text-[#552496] font-semibold"
+          <a href="/about" class="hover:text-[#552496] font-semibold"
             >Sobre Mi</a>
         </li>
         <li>
-          <a href="/links" class="hover:text-[#552496] font-semibold"
+          <a href="/contact" class="hover:text-[#552496] font-semibold"
             >Contacto</a>
         </li>
       </ul>
@@ -48,6 +52,6 @@ import SocialIcons from "../socialIcons/socialIcons.jsx";
   <div
     class="w-full border-t border-gray-600 py-10 text-center text-sm text-gray-500"
   >
-    lautarodevelops@gmail.com
+    pablocaceres1999@gmail.com
   </div>
 </footer>
