--- a/src/components/home/header/header.astro
+++ b/src/components/home/header/header.astro
@@ -19,7 +19,7 @@ import TypeEfect from "../header/typeEfect.jsx";
     class="relative z-10 flex flex-col items-center justify-center h-full text-center px-4"
   >
     <h1 class="text-4xl md:text-7xl font-bold text-white text-shadow mt-10">
-      Hola! soy Lautaro
+      Hola! soy Pablo Cáceres
     </h1>
 
     <TypeEfect client:visible />
@@ -27,10 +27,9 @@ import TypeEfect from "../header/typeEfect.jsx";
     <p
       class="text-xs md:text-xl text-white max-w-sm md:max-w-xl font-semibold mt-3"
     >
-      Explora mis proyectos, conoce un poco más sobre mí y, si deseas ponerte en
+      Explora mi recorrido, conoce un poco más sobre mí y, si deseas ponerte en
       contacto, ¡estoy a solo un mensaje de distancia!
     </p>
-    <SocialIcons client:visible />
     <a
       target="_blank"
       href="https://drive.google.com/file/d/1dIUZSRRXzl_TCSAeoRfMKT_SvydItgUd/view?usp=sharing"
