--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,21 +2,21 @@
 import Layout from "../layouts/Layout.astro";
 import Hero from "../components/commons/hero/hero.astro";
 import AboutMe from "../components/about/aboutMe.astro";
-import Experience from "../components/about/experience.astro";
+import ProjectsAbout from "../components/about/projectsAbout.astro";
+import Education from "../components/about/education.astro";
 import Features from "../components/about/features.astro";
 import Skills from "../components/about/skills.astro";
 import FaqsAbout from "../components/about/FaqsAbout.jsx";
-import BannerGithub from "../components/about/bannerGithub.astro";
 import Banner from "../components/commons/banners/banner.astro";
 ---
 
 <Layout title="about" description="about">
   <Hero titulo="Sobre Mi" />
   <AboutMe />
-  <Experience />
+  <ProjectsAbout />
+  <Education />
   <Features />
   <Skills />
   <FaqsAbout client:visible/>
-  <BannerGithub />
   <Banner />
 </Layout>
