--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,16 +1,14 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import MiFoto from "../assets/img/MiFoto.png";
+import MiFoto from "../assets/img/MiFoto.jpg";
 import CopyMail from "../components/links/copyMail.jsx";
 
 const links = [
   {
-    href: "https://www.linkedin.com/in/lautaro-rodr%C3%ADguez-collins-40505624a/",
+    href: "https://www.linkedin.com/in/pcaceresr",
     label: "LinkedIn",
   },
-  { href: "https://github.com/Lautaro-R-collins", label: "GitHub" },
-  { href: "https://x.com/lautarodevelops/", label: "Twitter" },
-  { href: "mailto:lautarodevelops@gmail.com", label: "Email" },
+  { href: "mailto:pablocaceres1999@gmail.com", label: "Email" },
 ];
 ---
 
@@ -24,7 +22,7 @@ const links = [
           <!-- Foto con borde -->
           <img
             src={MiFoto.src}
-            alt="Foto de Lautaro"
+            alt="Foto de Pablo"
             class="border-primary h-32 w-32 rounded-full shadow-lg"
           />
 
