--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import Header from "../components/home/header/header.astro";
 import Slider from "../components/home/header/slider.astro";
 import AboutHome from "../components/home/aboutHome/aboutHome.astro";
-import HomeProyect from "../components/home/homeProyect/homeProyect.astro";
+import Experience from "../components/about/experience.astro";
 import FAQS from "../components/home/faqs/faqs.jsx";
 import Banner from "../components/commons/banners/banner.astro";
 ---
@@ -12,7 +12,7 @@ import Banner from "../components/commons/banners/banner.astro";
   <Header />
   <Slider />
   <AboutHome />
-  <HomeProyect />
+  <Experience />
   <FAQS client:visible />
   <Banner />
 </Layout>
