--- a/src/components/commons/footer/footer.astro
+++ b/src/components/commons/footer/footer.astro
@@ -36,6 +36,10 @@ import SocialIcons from "../socialIcons/socialIcons.jsx";
             >Sobre Mi</a>
         </li>
         <li>
+          <a href="/recomendaciones" class="hover:text-[#552496] font-semibold"
+            >Recomendaciones</a>
+        </li>
+        <li>
           <a href="/contact" class="hover:text-[#552496] font-semibold"
             >Contacto</a>
         </li>
