--- a/src/components/commons/navbar/navbar.astro
+++ b/src/components/commons/navbar/navbar.astro
@@ -6,8 +6,8 @@ import { FaLinkedinIn } from "react-icons/fa6";
 const links = [
   { name: "Inicio", href: "/" },
   { name: "Experiencia", href: "/experiencia" },
-  { name: "Proyectos", href: "/proyectos" },
   { name: "Sobre Mi", href: "/about" },
+  { name: "Recomendaciones", href: "/recomendaciones" },
   { name: "Contacto", href: "/contact" },
 ];
 ---
