--- a/src/components/home/header/header.astro
+++ b/src/components/home/header/header.astro
@@ -32,7 +32,7 @@ import TypeEfect from "../header/typeEfect.jsx";
     </p>
     <a
       target="_blank"
-      href="https://drive.google.com/file/d/1dIUZSRRXzl_TCSAeoRfMKT_SvydItgUd/view?usp=sharing"
+      href="https://docs.google.com/document/d/1ZBoK84cTISS9tx-DcdW2TU9LKmNHSl3Z/edit?usp=drive_link&ouid=110435171646762006703&rtpof=true&sd=true"
       class="px-6 py-3 bg-primary hover:bg-secondary mt-3 text-white font-semibold rounded-3xl transition-all duration-150
          drop-shadow-[2px_2px_0_#0debd8] active:translate-0.5 active:drop-shadow-none"
     >
