--- a/src/components/commons/banners/banner.astro
+++ b/src/components/commons/banners/banner.astro
@@ -15,7 +15,7 @@
       </a>
       <a
         target="_blank"
-        href="https://drive.google.com/file/d/1dIUZSRRXzl_TCSAeoRfMKT_SvydItgUd/view?usp=sharing"
+        href="https://docs.google.com/document/d/1ZBoK84cTISS9tx-DcdW2TU9LKmNHSl3Z/edit?usp=drive_link&ouid=110435171646762006703&rtpof=true&sd=true"
         class="rounded-lg bg-primary hover:bg-secondary drop-shadow-[2px_2px_0_#0debd8] px-6 py-3 text-lg font-semibold text-white transition active:translate-0.5 active:drop-shadow-none"
       >
         Curriculum
