--- a/src/components/home/aboutHome/aboutHome.astro
+++ b/src/components/home/aboutHome/aboutHome.astro
@@ -30,8 +30,8 @@ import MiFoto from "../../../assets/img/MiFoto.jpg";
       <h2 class="text-white text-4xl font-bold drop-shadow-[2px_2px_0_#7836cf]">
         Sobre Mí
       </h2>
-      <p class="mt-2 font-semibold">
-        A completar
+      <p class="mt-2 font-semibold text-gray-300">
+        Soy Pablo Cáceres, <span class="text-primary font-bold">experto en IA</span> al servicio de las personas. Creo en una tecnología que nos ahorra tiempo. Herramientas de IA que conviertan horas en minutos, para poder dedicárselo a lo que más nos importa. Llevo poniendo esa visión <span class="text-primary font-bold">más de 5 años</span> en empresas como Telefónica, Enel X North America y la Unión Europea, con impacto real en equipos y personas.
       </p>
 
       <a
